--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="readme.txt">ReadMe</a></li>
+										<li><a href="new.md">ReadMe</a></li>
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
