--- a/Readme.html
+++ b/Readme.html
@@ -54,7 +54,7 @@
                   <div id="content"></div>
 
                     <script>
-                      $.get('../md/index.md', function(response, status, xhr){
+                      $.get('Readme.md', function(response, status, xhr){
                       $("#content").html(marked(response));
                       });
                     </script>
