--- a/Readme.html
+++ b/Readme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Andy's Read me</title>
+		<title>Andy's ReadMe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,8 +28,11 @@
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
-                            
+                            					
 						    <!-- Markdown --> 
+							<div>
+								<strong>You can see Readme.md here!</strong>
+							</div>
 							<div id="content"></div>
 							    <script>
 								$.get('Readme.md', function(response, status, xhr){
