--- a/Readme.html
+++ b/Readme.html
@@ -19,7 +19,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Andy</strong>'s personal page</a>
+									<a class="logo">You can see <strong>Readme.md</strong> here!</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -30,9 +30,7 @@
 								</header>
                             					
 						    <!-- Markdown --> 
-							<div>
-								<strong>You can see Readme.md here!</strong>
-							</div>
+							
 							<div id="content"></div>
 							    <script>
 								$.get('Readme.md', function(response, status, xhr){
