--- a/elements.html
+++ b/elements.html
@@ -451,6 +451,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
+										<li><a href="Readme.html">ReadMe</a></li>
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
