--- a/generic.html
+++ b/generic.html
@@ -80,6 +80,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
+										<li><a href="Readme.html">ReadMe</a></li>
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
