--- a/Readme.html
+++ b/Readme.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-            	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+		<script src="assets/js/jquery-3.4.1.min.js"></script>
+            	<script src="assets/js/marked.min.js"></script>
 	</head>
 	<body class="is-preload">
 
