--- a/Readme.html
+++ b/Readme.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="assets/js/jquery-3.4.1.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
             	<script src="assets/js/marked.min.js"></script>
 	</head>
 	<body class="is-preload">
