feat:refactor docs

--- a/Docs.html
+++ b/Docs.html
@@ -33,7 +33,7 @@
 							
 							<div id="content"></div>
 							    <script>
-								$.get('Readme.md', function(response, status, xhr){
+								$.get('Docs.md', function(response, status, xhr){
 								    $("#content").html(marked(response));
 								});
 							    </script>
